feat: included logout use case
