# backend/code/api/rest/src/main/resources/openapi.yaml
@@ -77,6 +77,14 @@ paths:
       summary: Logout
       description: 'Logs out, removes token access'
       operationId: postAuthLogout
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                refresh_token:
+                  type: string
       responses:
         '200':
           description: OK
