# backend/code/infraestructure/repository/src/main/java/es/ucm/luisegui/dunktomic/infrastructure/repository/AuthRepositoryImpl.java
@@ -45,4 +45,8 @@ public class AuthRepositoryImpl implements AuthRepository
             return Optional.empty();
         }
     }
+
+    public void revokeAccessToken(String refreshToken) {
+        authApi.logout(REALM, CLIENT_ID, CLIENT_SECRET, refreshToken).block();
+    }
 }
